--- a/_posts/2021-03-15-new-arxiv.md
+++ b/_posts/2021-03-15-new-arxiv.md
@@ -15,9 +15,9 @@ our reports on Arxiv:
 
 Videos showing our vision-based manipulation:
 
-<iframe width="420" height="315" src="{{site.baseurl}}resources/videos/pulley_servoing.mp4" frameborder="0" allowfullscreen></iframe>
-<iframe width="420" height="315" src="{{site.baseurl}}resources/videos/shaft_servoing.mp4" frameborder="0" allowfullscreen></iframe> 
+<iframe width="420" height="315" src="{{site.url}}/resources/videos/pulley_servoing.mp4" frameborder="0" allowfullscreen></iframe>
+<iframe width="420" height="315" src="{{site.url}}/resources/videos/shaft_servoing.mp4" frameborder="0" allowfullscreen></iframe> 
 
 
 Here's a cool video showing off a dual-arm assembly task:
-<iframe width="420" height="315" src="{{site.baseurl}}resources/videos/8_x_speed_dual_assembly.mp4" frameborder="0" allowfullscreen></iframe>
+<iframe width="420" height="315" src="{{site.url}}/resources/videos/8_x_speed_dual_assembly.mp4" frameborder="0" allowfullscreen></iframe>
